FLY wire David/force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Created to identify a certain cohort of clients that are defined as “microenterprise&quot;. SAL-2793</description>
    <inlineHelpText>Please indicate the type of customer as defined by the Payment Services Directive
-Small Charity: A small charity is one with an annual income of less than £1 million. 
-Micro-enterprise: An enterprise whose annual turnover and/or balance sheet total does not exceed €2 million (or sterling equivalent) and employs fewer than 10 people
-Entity: A legal entity that is not a Small Charity or Micro-enterprise</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Charity</fullName>
            </value>
            <value>
                <fullName>Micro-enterprise</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>