FLY wire David/force-app/main/default/objects/Account/fields/Date_Competitor_Provider_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Competitor_Provider_Added__c</fullName>
    <description>Date Competitor Wire Processor Added</description>
    <inlineHelpText>Enter the Date the Competitor Wire Processor was Added</inlineHelpText>
    <label>Date Competitor Provider Added</label>
    <type>Date</type>
</CustomField>