FLY wire David/force-app/main/default/objects/Account/fields/Date_Competitor_Provider_Removed__c.field-meta.xml
<CustomField>
    <fullName>Date_Competitor_Provider_Removed__c</fullName>
    <description>Date Competitor Wire Provider was removed.</description>
    <inlineHelpText>Enter Date Competitor Wire Provider was removed.</inlineHelpText>
    <label>Date Competitor Provider Removed</label>
    <type>Date</type>
</CustomField>