FLY wire David/force-app/main/default/objects/Account/fields/Date_First_Contract__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Contract__c</fullName>
    <description>Date the First Contract Signed directly with this Account. If there is a parent account Contract that this Account is under, then field will be blank.</description>
    <inlineHelpText>Date the First Contract Signed directly with this Account. If there is a parent account Contract that this Account is under, then field will be blank.</inlineHelpText>
    <label>Date First Contract</label>
    <type>Date</type>
</CustomField>