FLY wire David/force-app/main/default/objects/Account/fields/Date_First_Opp_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Opp_Won__c</fullName>
    <description>Rollup summary of the Won Opps, get the earliest date.</description>
    <inlineHelpText>Date the first Opportunity was Closed Won. i.e. Client Signed Date.</inlineHelpText>
    <label>Date First Opp Won</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>