FLY wire David/force-app/main/default/objects/Account/fields/Date_First_Product_Live__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Product_Live__c</fullName>
    <label>Date First Product Live</label>
    <summarizedField>Product_Configuration__c.Product_Status_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Configuration__c.Product_Status__c</field>
        <operation>equals</operation>
        <value>Active (Product Live)</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Configuration__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>