FLY wire David/force-app/main/default/objects/Account/fields/DefHC_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>DefHC_Hierarchy__c</fullName>
    <description>Formula to identify if this Account is a Parent Network, A Network or an Individual Hospital based on DefHC IDs.</description>
    <formula>/* All IDs the same is Parent Network */
IF(
AND(
texcellency__DefHC_Parent_NetworkID__c = texcellency__DefHC_NetworkID__c, texcellency__DefHC_NetworkID__c = texcellency__DefHC_HospitalID__c ),&quot;IsParentNetworkUltimate&quot;,

/* Child Network - Parent Network ID is not Network ID, Network ID = ID */
IF(
AND(
Not(ISNULL(texcellency__DefHC_Parent_NetworkID__c)),
texcellency__DefHC_Parent_NetworkID__c != texcellency__DefHC_NetworkID__c,
texcellency__DefHC_NetworkID__c =  texcellency__DefHC_HospitalID__c ),&quot;IsNetworkw/Parent&quot;,

/* Ultimate Network - No Parent Network ID and Network ID = ID */
IF(
AND(
ISNULL(texcellency__DefHC_Parent_NetworkID__c),
texcellency__DefHC_NetworkID__c = texcellency__DefHC_HospitalID__c ),&quot;IsNetworkUltimate&quot;,

/* Hospital with Network */
IF(
AND(
Not(ISNULL(texcellency__DefHC_NetworkID__c)),
texcellency__DefHC_NetworkID__c !=  texcellency__DefHC_HospitalID__c ),&quot;IsHospitalw/Parent&quot;,

/* Hospital No Parent */
IF(
AND(
ISNULL(texcellency__DefHC_Parent_NetworkID__c),
ISNULL(texcellency__DefHC_NetworkID__c ),
Not(ISNULL(texcellency__DefHC_HospitalID__c))),&quot;IsHospitalUltimate&quot;,

&quot;N/A&quot;)))))</formula>
    <inlineHelpText>Formula to identify if this Account is a Parent Network, A Network or an Individual Hospital based on DefHC IDs.</inlineHelpText>
    <label>DefHC Hierarchy</label>
    <type>Text</type>
</CustomField>