FLY wire David/force-app/main/default/objects/Account/fields/Destination_and_Split__c.field-meta.xml
<CustomField>
    <fullName>Destination_and_Split__c</fullName>
    <description>Select the Agents Student Study destination and percentage split.
Updated to reflect only regions as per SAL-3011</description>
    <inlineHelpText>Select the Agents Student Study destination</inlineHelpText>
    <label>Destination and Split</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUS/NZ</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>APAC 0-25%</fullName>
                <isActive>false</isActive>
                <label>APAC 0-25%</label>
            </value>
            <value>
                <fullName>APAC 25-50%</fullName>
                <isActive>false</isActive>
                <label>APAC 25-50%</label>
            </value>
            <value>
                <fullName>APAC 50-75%</fullName>
                <isActive>false</isActive>
                <label>APAC 50-75%</label>
            </value>
            <value>
                <fullName>APAC 75-100%</fullName>
                <isActive>false</isActive>
                <label>APAC 75-100%</label>
            </value>
            <value>
                <fullName>AUS/NZ 0-25%</fullName>
                <isActive>false</isActive>
                <label>AUS/NZ 0-25%</label>
            </value>
            <value>
                <fullName>AUS/NZ 25-50%</fullName>
                <isActive>false</isActive>
                <label>AUS/NZ 25-50%</label>
            </value>
            <value>
                <fullName>AUS/NZ 50-75%</fullName>
                <isActive>false</isActive>
                <label>AUS/NZ 50-75%</label>
            </value>
            <value>
                <fullName>AUS/NZ 75-100%</fullName>
                <isActive>false</isActive>
                <label>AUS/NZ 75-100%</label>
            </value>
            <value>
                <fullName>CAD 0-25%</fullName>
                <isActive>false</isActive>
                <label>CAD 0-25%</label>
            </value>
            <value>
                <fullName>CAD 25-50%</fullName>
                <isActive>false</isActive>
                <label>CAD 25-50%</label>
            </value>
            <value>
                <fullName>CAD 50-75%</fullName>
                <isActive>false</isActive>
                <label>CAD 50-75%</label>
            </value>
            <value>
                <fullName>CAD 75-100%</fullName>
                <isActive>false</isActive>
                <label>CAD 75-100%</label>
            </value>
            <value>
                <fullName>EMEA 0-25%</fullName>
                <isActive>false</isActive>
                <label>EMEA 0-25%</label>
            </value>
            <value>
                <fullName>EMEA 25-50%</fullName>
                <isActive>false</isActive>
                <label>EMEA 25-50%</label>
            </value>
            <value>
                <fullName>EMEA 50-75%</fullName>
                <isActive>false</isActive>
                <label>EMEA 50-75%</label>
            </value>
            <value>
                <fullName>EMEA 75-100%</fullName>
                <isActive>false</isActive>
                <label>EMEA 75-100%</label>
            </value>
            <value>
                <fullName>UK 0-25%</fullName>
                <isActive>false</isActive>
                <label>UK 0-25%</label>
            </value>
            <value>
                <fullName>UK 25-50%</fullName>
                <isActive>false</isActive>
                <label>UK 25-50%</label>
            </value>
            <value>
                <fullName>UK 50-75%</fullName>
                <isActive>false</isActive>
                <label>UK 50-75%</label>
            </value>
            <value>
                <fullName>UK 75-100%</fullName>
                <isActive>false</isActive>
                <label>UK 75-100%</label>
            </value>
            <value>
                <fullName>US 0-25%</fullName>
                <isActive>false</isActive>
                <label>US 0-25%</label>
            </value>
            <value>
                <fullName>US 25-50%</fullName>
                <isActive>false</isActive>
                <label>US 25-50%</label>
            </value>
            <value>
                <fullName>US 50-75%</fullName>
                <isActive>false</isActive>
                <label>US 50-75%</label>
            </value>
            <value>
                <fullName>US 75-100%</fullName>
                <isActive>false</isActive>
                <label>US 75-100%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>