FLY wire David/force-app/main/default/objects/Account/fields/DHC_Days_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>DHC_Days_Sales_Outstanding__c</fullName>
    <description>DefHC Custom Field add to integration. Requested by HC team.</description>
    <inlineHelpText>DefHC Custom Field add to integration, automatically updated weekly.</inlineHelpText>
    <label>DHC Days Sales Outstanding</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>