FLY wire David/force-app/main/default/objects/Account/fields/DHC_EMR_Install_Year_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>DHC_EMR_Install_Year_Inpatient__c</fullName>
    <description>DefHC Custom Field add to integration. Requested by HC team.</description>
    <inlineHelpText>DefHC Custom Field add to integration, updated monthly.</inlineHelpText>
    <label>DHC EMR Install Year (Inpatient)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>