FLY wire David/force-app/main/default/objects/Account/fields/DHC_Hierarchy_Override__c.field-meta.xml
<CustomField>
    <fullName>DHC_Hierarchy_Override__c</fullName>
    <description>For HC vertical – indicates whether the account should be excluded from automated hierarchy updates from DHC. Used by DHC Hierarchy flow.</description>
    <inlineHelpText>For HC vertical – indicates whether the account should be excluded from automated hierarchy updates from DHC. Used by DHC Hierarchy flow.</inlineHelpText>
    <label>DHC Hierarchy Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Override Ultimate / DHC Parent Network</fullName>
            </value>
            <value>
                <fullName>Override Parent / DHC Network</fullName>
            </value>
            <value>
                <fullName>Override Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>