FLY wire David/force-app/main/default/objects/Account/fields/DHC_Revenue_Cycle_Mangement_Software__c.field-meta.xml
<CustomField>
    <fullName>DHC_Revenue_Cycle_Mangement_Software__c</fullName>
    <description>DefHC Custom Field add to integration. Requested by HC team.</description>
    <inlineHelpText>DefHC Custom Field add to integration, automatically updated weekly.</inlineHelpText>
    <label>DHC Revenue Cycle Mangement Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>