FLY wire David/force-app/main/default/objects/Account/fields/DHC_Status__c.field-meta.xml
<CustomField>
    <fullName>DHC_Status__c</fullName>
    <description>USED for DHC integration to provide sync status with DHC&apos;s database.</description>
    <inlineHelpText>USED for DHC integration to provide sync status with DHC&apos;s database.</inlineHelpText>
    <label>DHC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>