FLY wire David/force-app/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <inlineHelpText>If disqualified, Please provide a reason why.</inlineHelpText>
    <label>OBS_Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too Small</fullName>
            </value>
            <value>
                <fullName>Bad Record Creation</fullName>
            </value>
            <value>
                <fullName>Closed/ Out of Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>