FLY wire David/force-app/main/default/objects/Account/fields/Do_Not_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the owner of the account should not be reassigned by automations. Used by the HC Reassign Owner flow to exclude accounts from automation owner reassignment.</description>
    <inlineHelpText>Indicates that the owner of the account should not be reassigned by automations. Used by the HC Reassign Owner flow to exclude accounts from automation owner reassignment.</inlineHelpText>
    <label>Do Not Reassign</label>
    <type>Checkbox</type>
</CustomField>