FLY wire David/force-app/main/default/objects/Account/fields/Domestic_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Enrollment__c</fullName>
    <description># of Domestic Students Enrolled.</description>
    <inlineHelpText>Enter the # of Domestic Students Enrolled.</inlineHelpText>
    <label>Domestic Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>