FLY wire David/force-app/main/default/objects/Account/fields/Domestic_Fee__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Fee__c</fullName>
    <description>Global Payments fee</description>
    <label>Domestic Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>