FLY wire David/force-app/main/default/objects/Account/fields/Domestic_Open_Banking__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Open_Banking__c</fullName>
    <description>From Tom/Simon</description>
    <label>Domestic Open Banking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Trustly</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>