FLY wire David/force-app/main/default/objects/Account/fields/Domestic_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Payment_Processor__c</fullName>
    <description>Which Domestic Payment Processor is being used by this client?</description>
    <inlineHelpText>Select the Domestic Payment Processor that this client is using.</inlineHelpText>
    <label>Domestic Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>Capita</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>Crehana</fullName>
            </value>
            <value>
                <fullName>Cybersource</fullName>
            </value>
            <value>
                <fullName>DiamondMind</fullName>
            </value>
            <value>
                <fullName>DISCO</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>Esenda</fullName>
            </value>
            <value>
                <fullName>FACTS</fullName>
            </value>
            <value>
                <fullName>Flywire</fullName>
            </value>
            <value>
                <fullName>Herring Bank</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>KEI</fullName>
            </value>
            <value>
                <fullName>KIP</fullName>
            </value>
            <value>
                <fullName>Local Bank</fullName>
            </value>
            <value>
                <fullName>Moneris</fullName>
            </value>
            <value>
                <fullName>MTFX</fullName>
            </value>
            <value>
                <fullName>MySIS</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Nova</fullName>
            </value>
            <value>
                <fullName>Official Payments/ACI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PayCode</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>SchoolEasyPay</fullName>
            </value>
            <value>
                <fullName>SMART</fullName>
            </value>
            <value>
                <fullName>Sungard</fullName>
            </value>
            <value>
                <fullName>Synergetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>