FLY wire David/force-app/main/default/objects/Account/fields/DPP_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DPP_Contract_End_Date__c</fullName>
    <description>Select the date the Contract ends for the Domestic Payment Processor this Institution uses. This should be used to inform when there is an upcoming Opportunity potential.</description>
    <inlineHelpText>Select the date the Contract ends for the Domestic Payment Processor this Institution uses.</inlineHelpText>
    <label>DPP Contract End Date</label>
    <type>Date</type>
</CustomField>