FLY wire David/force-app/main/default/objects/Account/fields/Dynamic_CCY_CON_PRO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_CCY_CON_PRO_End_Date__c</fullName>
    <description>Per Simon for Competitor fields</description>
    <inlineHelpText>Dynamic Currency Conversion Provider Contract End Date</inlineHelpText>
    <label>Dynamic CCY CON PRO End Date</label>
    <type>Date</type>
</CustomField>