FLY wire David/force-app/main/default/objects/Account/fields/Dynamic_Currency_Conversion_Provider__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Currency_Conversion_Provider__c</fullName>
    <description>Per SImon&apos;s request</description>
    <label>Dynamic Currency Conversion Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Barclaycard</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Fexco</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Worldpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>