FLY wire David/force-app/main/default/objects/Account/fields/Early_Out_Partner_s__c.field-meta.xml
<CustomField>
    <fullName>Early_Out_Partner_s__c</fullName>
    <label>Early Out Partner(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AmeriCollect</fullName>
            </value>
            <value>
                <fullName>Avadyne</fullName>
            </value>
            <value>
                <fullName>CBC</fullName>
            </value>
            <value>
                <fullName>Change healthcare</fullName>
            </value>
            <value>
                <fullName>Client Financial Services (CFS)</fullName>
            </value>
            <value>
                <fullName>Conifer</fullName>
            </value>
            <value>
                <fullName>Credit Management</fullName>
            </value>
            <value>
                <fullName>Elevate PFS</fullName>
            </value>
            <value>
                <fullName>Getix</fullName>
            </value>
            <value>
                <fullName>HBCS Revenue Cycle</fullName>
            </value>
            <value>
                <fullName>HIMG</fullName>
            </value>
            <value>
                <fullName>HRG</fullName>
            </value>
            <value>
                <fullName>HRMG</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>KeyBridge Medical Revenue Care</fullName>
            </value>
            <value>
                <fullName>Magnet Solutions</fullName>
            </value>
            <value>
                <fullName>MEDCO</fullName>
            </value>
            <value>
                <fullName>MediRevv</fullName>
            </value>
            <value>
                <fullName>Meduit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provider Owned</fullName>
            </value>
            <value>
                <fullName>RevCo Solutions</fullName>
            </value>
            <value>
                <fullName>revMD</fullName>
            </value>
            <value>
                <fullName>RGL</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>Sherloq</fullName>
            </value>
            <value>
                <fullName>Strategic Outsourcing Solutions (SOS)</fullName>
            </value>
            <value>
                <fullName>TruBridge</fullName>
            </value>
            <value>
                <fullName>UCB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>