FLY wire David/force-app/main/default/objects/Account/fields/Electronic_Health_Record__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Health_Record__c</fullName>
    <description>Database of all patient Information</description>
    <inlineHelpText>Select the EHR (Database of all patient Information) used by client.</inlineHelpText>
    <label>Electronic Health Record</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>AthenaHealth</fullName>
            </value>
            <value>
                <fullName>CareConnect</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>eClinicalWorks</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>GE Centricity</fullName>
            </value>
            <value>
                <fullName>Harris CareTaker</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>Nextgen</fullName>
            </value>
            <value>
                <fullName>Practice Fusion</fullName>
            </value>
            <value>
                <fullName>Quest Care360</fullName>
            </value>
            <value>
                <fullName>Sorian</fullName>
            </value>
            <value>
                <fullName>STAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>