FLY wire David/force-app/main/default/objects/Account/fields/Electronic_Medical_Rec_Ambulatory__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Medical_Rec_Ambulatory__c</fullName>
    <description>Electronic/Medical Rec Ambulatory from DefHC database.</description>
    <inlineHelpText>Electronic/Medical Rec Ambulatory from DefHC database.</inlineHelpText>
    <label>Electronic/Medical Rec Ambulatory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>