FLY wire David/force-app/main/default/objects/Account/fields/Electronic_Medical_Rec_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Medical_Rec_Inpatient__c</fullName>
    <description>Electronic Health/Medical Record - Inpatient from DefHC database</description>
    <inlineHelpText>Electronic Health/Medical Record - Inpatient from DefHC database</inlineHelpText>
    <label>Electronic/Medical Rec Inpatient</label>
    <length>200</length>
    <type>Text</type>
</CustomField>