FLY wire David/force-app/main/default/objects/Account/fields/Engage_Access_Target__c.field-meta.xml
<CustomField>
    <fullName>Engage_Access_Target__c</fullName>
    <label>Engage &amp; Access Target?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>