FLY wire David/force-app/main/default/objects/Account/fields/ePayments_Plus_Target__c.field-meta.xml
<CustomField>
    <fullName>ePayments_Plus_Target__c</fullName>
    <label>ePayments Plus Target?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>