FLY wire David/force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <description>Select the ERP the Client/Prospect uses.</description>
    <inlineHelpText>Select the ERP the Client/Prospect uses.</inlineHelpText>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ERP</valueSetName>
    </valueSet>
</CustomField>