FLY wire David/force-app/main/default/objects/Account/fields/Estimated_Credit_Card_MM_Approved__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credit_Card_MM_Approved__c</fullName>
    <description>Annual credit card money moved approved</description>
    <inlineHelpText>Annual credit card money moved approved</inlineHelpText>
    <label>OBS_Est Credit Card MM Approved ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>