FLY wire David/force-app/main/default/objects/Account/fields/Finance_System__c.field-meta.xml
<CustomField>
    <fullName>Finance_System__c</fullName>
    <description>WPM Finance System</description>
    <inlineHelpText>WPM Finance System</inlineHelpText>
    <label>Finance System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS e</fullName>
            </value>
            <value>
                <fullName>ABS eFinancials</fullName>
            </value>
            <value>
                <fullName>ABS openAccounts</fullName>
            </value>
            <value>
                <fullName>Access Dimensions</fullName>
            </value>
            <value>
                <fullName>Capita Aptos</fullName>
            </value>
            <value>
                <fullName>Civica Financials</fullName>
            </value>
            <value>
                <fullName>iplicit</fullName>
            </value>
            <value>
                <fullName>Microsoft Great Plains</fullName>
            </value>
            <value>
                <fullName>Oracle Financials</fullName>
            </value>
            <value>
                <fullName>Oracle Fusion</fullName>
            </value>
            <value>
                <fullName>Oracle PeopleSoft FCSM</fullName>
            </value>
            <value>
                <fullName>Other (In-house or bespoke)</fullName>
            </value>
            <value>
                <fullName>PS Financials</fullName>
            </value>
            <value>
                <fullName>SAP Financials</fullName>
            </value>
            <value>
                <fullName>SunAccounts</fullName>
            </value>
            <value>
                <fullName>Symmetry bluQube</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Financials</fullName>
            </value>
            <value>
                <fullName>Topaz Financials</fullName>
            </value>
            <value>
                <fullName>UNIT4 Agresso Business World</fullName>
            </value>
            <value>
                <fullName>UNIT4 Coda Financials</fullName>
            </value>
            <value>
                <fullName>Xledger</fullName>
            </value>
            <value>
                <fullName>UNIT4 QLx Financials</fullName>
            </value>
            <value>
                <fullName>ABS e5</fullName>
            </value>
            <value>
                <fullName>Corero Resource Financials</fullName>
            </value>
            <value>
                <fullName>Advance Business Solution</fullName>
                <isActive>false</isActive>
                <label>Advance Business Solution</label>
            </value>
            <value>
                <fullName>Microsoft Dynamics 365</fullName>
                <isActive>false</isActive>
                <label>Microsoft Dynamics 365</label>
            </value>
            <value>
                <fullName>Oracle ERP</fullName>
                <isActive>false</isActive>
                <label>Oracle ERP</label>
            </value>
            <value>
                <fullName>Sage</fullName>
                <isActive>false</isActive>
                <label>Sage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>